# Rule4210

./: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh
.github/workflows/: docker.yml
crates/rule4210-core/: Cargo.toml
crates/rule4210-core/src/: lib.rs
crates/rule4210-demo/: Cargo.toml
crates/rule4210-demo/src/: main.rs
crates/rule4210-margin/: Cargo.toml
crates/rule4210-margin/src/: lib.rs
crates/rule4210-pricer/: Cargo.toml
crates/rule4210-pricer/src/: lib.rs
crates/rule4210-scenarios/: Cargo.toml
crates/rule4210-scenarios/src/: lib.rs
crates/rule4210-server/: Cargo.toml
crates/rule4210-server/src/: main.rs
crates/rule4210-server/static/: index.html  login.html
data/: spy_chain.json
