[workspace]
resolver = "2"
members = [
    "crates/rule4210-core",
    "crates/rule4210-pricer",
    "crates/rule4210-scenarios",
    "crates/rule4210-margin",
    "crates/rule4210-demo",
    "crates/rule4210-server",
]

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
